--- a/style.css
+++ b/style.css
@@ -60,3 +60,23 @@ button {
 button:hover {
   filter: brightness(1.2);
 }
+
+button:disabled {
+  background-color: gray;
+  opacity: 0.7;
+}
+
+
+#resposta {
+  display: none;
+  margin-top: 30px;
+  border: 3px solid blueviolet;
+  padding: 10px;
+  border-radius: 5px;
+  transition: opacity 1s;
+}
+
+#resposta:hover {
+  background-color: blueviolet;
+  transition:  0.4s;
+}
